--- a/assets/layout.ejs
+++ b/assets/layout.ejs
@@ -62,6 +62,7 @@
   .pL10{padding-left:10px}
   .imgLogo{width:150px}
   .imgLogo img{width:150px;height:40px}
+  .imgLogoEmp img{width:50px;height:20px}
   .barra{width:2px;height:15px;;background-color:#000;}
   .rBb td{border-bottom:solid 1px #000}
   .BB{border-bottom:solid 1px #000}
@@ -181,6 +182,9 @@
     </table><br /><table class="w666">
         <tr class="BHead">
 			<td class="imgLogo Al"><img src="<%= logoURL %>" /></td>
+			<% if(boleto['logoURLEmp']){ %>
+            <td class="imgLogoEmp"><img src="<%= boleto['logoURLEmp'] %>" /></td>
+            <% } %>
             <td class="barra"></td>
 			<td class="w72 Ab bc Ac"><%= codigo_banco %></td>
             <td class="barra"></td>
@@ -264,6 +268,9 @@
     </table><table class="w666">
         <tr class="BHead">
 			<td class="imgLogo Al"><img src="<%= logoURL %>" /></td>
+            <% if(boleto['logoURLEmp']){ %>
+            <td class="imgLogoEmp"><img src="<%= boleto['logoURLEmp'] %>" /></td>
+            <% } %>
             <td class="barra"></td>
 			<td class="w72 Ab bc Ac"><%= codigo_banco %></td>
             <td class="barra"></td>
