Correção no style do layouts.ejs

--- a/assets/layout.ejs
+++ b/assets/layout.ejs
@@ -62,7 +62,7 @@
   .pL10{padding-left:10px}
   .imgLogo{width:150px}
   .imgLogo img{width:150px;height:40px}
-  .imgLogoEmp img{width:50px;height:20px}
+  .imgLogoEmp img{width:50px;}
   .barra{width:2px;height:15px;;background-color:#000;}
   .rBb td{border-bottom:solid 1px #000}
   .BB{border-bottom:solid 1px #000}
